--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
-    "foam.completion.label": "path",
-    "foam.completion.useAlias": "whenPathDiffersFromTitle",
+    "foam.completion.label": "title",
+    "foam.completion.useAlias": "never",
     "foam.dateSnippets.afterCompletion": "navigateToNote",
     "foam.edit.linkReferenceDefinitions": "withoutExtensions"
 }
